# pidentity

./: .gitignore  404.html  CHANGES.md  README.md  mkdocs.yml  pyproject.toml
.pidentity/: test.json
access/: index.html
api/guard/: index.html
contacts/: index.html
content/: index.html
contracts/: index.html
control/: index.html
docs/: access.md  contacts.md  contracts.md  control.md  index.md
docs/api/: contracts.md
persistence/: index.html
pidentity/: __init__.py  conditions.py  constants.py  contract.py  control.py  controller.py  database.py  engine.py  guard.py  macros.py  operators.py  providers.py  rules.py
pydentity/: __init__.py  constants.py  contract.py  control.py  database.py  operators.py  rules.py
site/: 404.html  index.html
site/api/contracts/: index.html
site/contracts/: index.html
site/contributions/: index.html
site/control/: index.html
site/persistence/: index.html
tests/: .py  __init__.py  test_conditions.py  test_contract.py  test_control.py  test_controller.py  test_memory.py
