[tool.poetry]
name = "pidentity"
version = "0.1.3"
description = "The Simplest Attribute Based Access Control Python Library"
authors = ["Raymond <ortserga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
